feat: add link food and drink

--- a/yes.html
+++ b/yes.html
@@ -16,6 +16,15 @@
           alt=""
         />
       </figure>
+      <button class="btn">
+        <a
+          href="https://forms.gle/nw4ANQt35WgUzsCK9"
+          target="_blank"
+          style="text-decoration: none; color: #fff"
+        >
+          Link Foods and Drink.
+        </a>
+      </button>
     </main>
   </body>
 </html>
